--- a/src/main/resources/public/src/scss/formRefactoring/_layout.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_layout.scss
@@ -19,20 +19,45 @@
     font-weight: $layout-header-font-weight;
     color: $layout-header-font-color;
     background-color: $layout-header-bg-color;
-    padding: 0 1.25rem; // 0 20px
     z-index: $z-index-gnb;
-    // form designer 문구
-    .name {
-      font-size: 1.125rem; // 18px
-      padding: 0 0.9375rem; // 15px
+    .logo {
+      width: 12.5rem; // 200px
+      padding: 0 $layout-header-padding; // 0 12px
     }
-    // 아이콘 구분자
-    .separator {
-      width: 0.063rem; // 1px
-      height: 1.25rem; // 20px
-      background-color: #4DB7FF;
+    .name {
+      font-size: $layout-header-font-size;
+    }
+    .buttons {
+      width: 20rem; // 320px
+      padding: 0 $layout-header-padding; // 0 12px
+      .dropdown {
+        &-content {
+          visibility: hidden;
+          background-color: $layout-header-dropdown-bg-color;
+          color: map-get($blues, "hover");
+          text-align: center;
+          font-size: 1.125rem; // 18px
+          margin: 0.6875rem 0 0 0; // 11px
+          position: absolute;
+          z-index: 500;
+          box-shadow: $layout-header-box-shadow;
+        }
+        &-item {
+          padding: 0.6875rem 0.875rem; // 11px 14px
+          &:hover { background-color: $layout-header-dropdown-hover-bg-color; }
+        }
+      }
+      .btn-dropdown:hover {
+        > .dropdown-content {
+          visibility: visible;
+          display: block;
+        }
+        &:last-child > .dropdown-content {
+          right: $layout-header-padding; // 12px
+        }
+      }
+    }
   }
-}
   &-component-palette {
     position:fixed;
     top: $layout-header-height;
@@ -62,7 +87,7 @@
     font-weight: $layout-properties-panel-header-font-weight;
     color: $layout-properties-panel-header-font-color;
     background-color: $layout-properties-panel-header-bg-color;
-    padding: 0.9375rem; // 15px;
+    padding: 0.625rem 0.75rem; // 10px 12px;
   }
   &-properties-panel {
     @include fixed(calc(#{$layout-header-height} + #{$layout-properties-panel-header-height}), 0, 0, null);
@@ -73,9 +98,7 @@
     justify-content: space-between;
     width: $layout-properties-panel-width;
     background-color: $layout-properties-panel-bg-color;
-    border-left: $layout-properties-panel-border;
     box-shadow: $layout-properties-panel-box-shadow;
-    padding: 0.9375rem; // 15px;
     overflow-x: hidden;
     overflow-y: auto;
     @include scrollbarHidden;
@@ -122,6 +145,7 @@
           height: $component-icon-height;
           text-align: center;
           border: $accordion-border;
+          padding: 0.625rem 0; // 10px 0
           margin-top: -0.0625rem; // -1px
           margin-right: -0.0625rem; // -1px
           cursor: move;
@@ -134,33 +158,38 @@
           &:nth-child(even) {
             flex: 1 1 auto;
           }
-          &:hover { background-color: $component-icon-hover-bg-color; }
+          &:hover {
+            background-color: $component-icon-hover-bg-color;
+            > .icon { background: $icon-component-focus-color; }
+            > .component-name { color: $icon-component-focus-color; }
+          }
 
           .icon {
             display: inline-block;
-            margin:  1.563rem 0 0.625rem 0; // 25px 0 10px 0
           }
-          .icon-inputBox { @include maskImage($icon-component-inputBox, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-textArea { @include maskImage($icon-component-textArea, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-textEditor { @include maskImage($icon-component-textEditor, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-dropdown { @include maskImage($icon-component-dropdown, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-radio { @include maskImage($icon-component-radio, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-checkBox { @include maskImage($icon-component-checkBox, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-label { @include maskImage($icon-component-label, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-date { @include maskImage($icon-component-date, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-time { @include maskImage($icon-component-time, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-dateTime { @include maskImage($icon-component-dateTime, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-fileUpload { @include maskImage($icon-component-fileUpload, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-customCode { @include maskImage($icon-component-customCode, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-dynamicRowTable { @include maskImage($icon-component-dynamicRowTable, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-ci { @include maskImage($icon-component-ci, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-label { @include maskImage($icon-component-label, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-image { @include maskImage($icon-component-image, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
-          .icon-divider { @include maskImage($icon-component-divider, 2.375rem, 2.375rem, no-repeat, center, 2.375rem 2.375rem, $icon-component-color); } // 38xp 38p
+          .icon-inputBox { @include maskImage($icon-component-inputBox, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-textArea { @include maskImage($icon-component-textArea, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-textEditor { @include maskImage($icon-component-textEditor, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-dropdown { @include maskImage($icon-component-dropdown, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-radio { @include maskImage($icon-component-radio, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-checkBox { @include maskImage($icon-component-checkBox, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-label { @include maskImage($icon-component-label, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-date { @include maskImage($icon-component-date, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-time { @include maskImage($icon-component-time, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-dateTime { @include maskImage($icon-component-dateTime, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-fileUpload { @include maskImage($icon-component-fileUpload, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-customCode { @include maskImage($icon-component-customCode, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-dynamicRowTable { @include maskImage($icon-component-dynamicRowTable, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-ci { @include maskImage($icon-component-ci, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-label { @include maskImage($icon-component-label, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-image { @include maskImage($icon-component-image, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
+          .icon-divider { @include maskImage($icon-component-divider, 2rem, 2rem, no-repeat, center, 2rem 2rem, $icon-component-color); } // 32px 32px
 
           .component-name {
             display: block;
+            padding-top: 0.375rem; // 6px
             color: $gray;
+            font-size: 0.875rem; // 14px
           }
           // drag & drop
           &.drag-on {
