--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -54,8 +54,10 @@
             // 썸네일 표시
             document.getElementById('searchValue').focus();
             document.getElementById('searchValue').addEventListener('keyup', function () {
-                document.querySelector('.thumbnail-main').innerHTML = '';
-                 getImages(false);
+                pressKeyForAction(event, 'Enter', function () {
+                    document.querySelector('.thumbnail-main').innerHTML = '';
+                    getImages(false);
+                });
             });
         }
 
