#10538 폼 리팩토링 - 태그 기능 추가
inputbox 컴포넌트에 태그 속성 추가.

--- a/src/main/resources/public/template/cmdb/ci/ciList.html
+++ b/src/main/resources/public/template/cmdb/ci/ciList.html
@@ -31,7 +31,7 @@
                 <td style="width: 15%;" class="align-left" th:text="${ci.ciName}"></td>
                 <td style="width: 25%;" class="align-left" th:text="${ci.ciDesc}"></td>
                 <td style="width: 25%;" class="align-left">
-                    <span class="tag align-left text-ellipsis" th:each="tag: ${ci.tags}" th:text="${tag.value}"></span>
+                    <span class="tag align-left text-ellipsis" th:each="tag: ${ci.tags}" th:text="${tag.tagValue}"></span>
                 </td>
             </tr>
         </th:block>
