--- a/src/main/resources/public/template/formRefactoring/formDesigner.html
+++ b/src/main/resources/public/template/formRefactoring/formDesigner.html
@@ -10,6 +10,7 @@
     <link th:href="@{/assets/css/document2.css}" rel="stylesheet"/>
     <script th:src="@{/assets/js/util/shortcut-alice.js}"></script>
     <script th:src="@{/assets/vendors/sortableJS/sortable.js}"></script>
+    <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
     <script type="module">
         // 사용자 세션 정보 저장
         import { SESSION } from '../../assets/js/formRefactoring/lib/constants.js';
