--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -31,6 +31,7 @@
 </th:block>
 </body>
 <th:block layout:fragment="script">
+    <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
     <script th:src="@{/assets/js/document/document.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
