#10377 목록 조회시 limit 고정 및 데이터 구조 변경 -> 업무흐름 관리 (프로세스, 문서양식, 업무흐름, 커스텀 코드, 이미지 관리, 패턴) ListReturnDto 구조로 변경

--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -90,10 +90,10 @@
                             });
                         }
                     } else {
-                        let count = imageList.toString() === '' ? 0 : JSON.stringify(imageList[0].totalCount)
+                        let count = JSON.stringify(imageList.totalCount)
                         aliceJs.showTotalCount(count, 'totalCount');
                         document.getElementById('totalCount').value = count;
-                        imageList.forEach(function (image) {
+                        imageList.data.forEach(function (image) {
                             addThumbnail(image);
                         });
                         OverlayScrollbars(document.querySelector('.image-content-edit'), {
