#10377 목록 조회시 limit 고정 및 데이터 구조 변경 -> 문서함, 신청서, 자료실, 게시판, 포탈 ListReturnDto 구조로 변경

--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -159,12 +159,12 @@
                 callbackFunc: function (response) {
                     if (isScroll) {
                         let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
+                        if (dataList.data.length > 0) {
+                            aliceJs.showTotalCount(dataList.totalCount);
+                            document.getElementById('totalCount').value = dataList.totalCount;
                             if (aliceJs.isEnableScrollEvent(offsetCount)) {
                                 offsetCount = offsetCount + aliceJs.searchDataCount;
-                                dataList.forEach(function(data) {
+                                dataList.data.forEach(function(data) {
                                     getDataTemplate(data);
                                 });
                             }
