--- a/src/main/resources/public/template/formRefactoring/documentSearch.html
+++ b/src/main/resources/public/template/formRefactoring/documentSearch.html
@@ -9,7 +9,7 @@
 <th:block layout:fragment="cssLink">
     <link th:href="@{/assets/vendors/tagify/tagify.css}" rel="stylesheet"/>
     <link th:href="@{/assets/css/formRefactoring.css}" rel="stylesheet"/>
-    <link th:href="@{/assets/css/document2.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/documentRefactoring.css}" rel="stylesheet"/>
 </th:block>
 <th:block layout:fragment="scriptLink">
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
