--- a/src/main/resources/public/template/formRefactoring/formDesigner.html
+++ b/src/main/resources/public/template/formRefactoring/formDesigner.html
@@ -6,7 +6,7 @@
     <meta http-equiv="expire" content="-1"/>
     <meta http-equiv="cache-control" content="no-cache"/>
     <meta http-equiv="pragma" content="no-cache"/>
-    <link th:href="@{/assets/css/document2.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/documentRefactoring.css}" rel="stylesheet"/>
     <th:block th:replace="formRefactoring/fragments/formHead :: formHead"></th:block>
     <script th:src="@{/assets/js/util/shortcut-alice.js}"></script>
     <script th:src="@{/assets/vendors/sortableJS/sortable.js}"></script>
