#10708 폼 리팩토링 - Refactoring 제거 - 화면

--- a/src/main/resources/public/template/formDesigner/formCore.html
+++ b/src/main/resources/public/template/formDesigner/formCore.html
@@ -3,7 +3,7 @@
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <title layout:title-pattern="$LAYOUT_TITLE : $CONTENT_TITLE">Zenius ITSM</title>
-    <th:block th:replace="form/fragments/formHead :: formHead"></th:block>
+    <th:block th:replace="formDesigner/fragments/formHead :: formHead"></th:block>
     <th:block layout:fragment="css"></th:block>
     <th:block layout:fragment="script"></th:block>
 </head>
