--- a/src/main/resources/public/template/formDesigner/fragments/formHead.html
+++ b/src/main/resources/public/template/formDesigner/fragments/formHead.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<th:block th:fragment="formHead">
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="formHead">
     <meta charset="utf-8">
     <link rel="shortcut icon" th:href="@{/assets/media/images/zenius.ico}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,12 +8,12 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
-    <link th:href="@{/assets/css/form.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/formDesigner.css}" rel="stylesheet"/>
     <script th:src="@{/assets/js/util/i18n-alice.js}"></script>
-    <script th:src="@{/assets/js/util/alert-alice.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
     <script th:src="@{/assets/js/util/util-alice.js}"></script>
     <script th:src="@{/assets/js/util/modal-alice.js}"></script>
+    <script th:src="@{/assets/js/util/alert-alice.js}"></script>
     <script th:src="@{/assets/js/util/datetimepicker-alice.js}"></script>
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
     <script th:src="@{/assets/js/util/colorPalette-alice.js}"></script>
@@ -25,12 +25,9 @@
     <script th:src="@{/assets/js/util/validation-alice.js}"></script>
     <script th:src="@{/assets/js/util/tree-alice.js}"></script>
     <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
-    <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
-    <script th:src="@{/assets/js/form/form.core.js}"></script>
-    <script th:src="@{/assets/js/form/form.component.ci.js}"></script>
-    <script th:src="@{/assets/js/form/form.component.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
+        // TODO: 모듈로 변경 필요
         const parsedDateTimeFormat = '[[${#authentication.details.timeFormat}]]'.split(' ');
         i18n.init(JSON.stringify({
             dateTimeFormat: '[[${#authentication.details.timeFormat}]]',
@@ -39,17 +36,6 @@
             lang: '[[${#authentication.details.lang}]]',
             timezone: '[[${#authentication.details.timezone}]]'
         }));
-
-        aliceForm.initSession(JSON.stringify({
-            userKey : '[[${#authentication.details.userKey}]]',
-            userId : '[[${#authentication.details.userId}]]',
-            userName: '[[${#authentication.details.userName}]]',
-            email: '[[${#authentication.details.email}]]',
-            position: '[[${#authentication.details.position}]]',
-            department: '[[${#authentication.details.department}]]',
-            officeNumber: '[[${#authentication.details.officeNumber}]]',
-            mobileNumber: '[[${#authentication.details.mobileNumber}]]'
-        }));
     </script>
-</th:block>
+</head>
 </html>
