#10681 신청서 디자인 적용 1단계
- fetch 공통 기능 수정에 따른 documentEditor.js 수정
- 아코디언 하단 실선 추가
- 리팩토링 페이지 바로가기 링크 포함 기타 수정

--- a/src/main/resources/public/assets/css/documentRefactoring.css
+++ b/src/main/resources/public/assets/css/documentRefactoring.css
@@ -1549,10 +1549,7 @@ body.modal-active {
   border: 0.0625rem solid #ffffff;
 }
 
-.zenius-group.accordion {
-  border-bottom: 0.0625rem solid #EBEBEB;
-}
-.zenius-group.accordion .zenius-group-accordion-checkBox:checked ~ .accordion:not(.off) {
+.zenius-group.accordion .zenius-group-accordion-checkBox:checked ~ .zenius-row-tooltip:not(.off):last-child {
   border-bottom: 0.0625rem solid #EBEBEB;
 }
 
