--- a/src/main/resources/public/src/scss/portal/_buttons.scss
+++ b/src/main/resources/public/src/scss/portal/_buttons.scss
@@ -2,9 +2,7 @@
 
 // 되돌아가기
 .login-return {
-  position: relative;
-  top: 5rem; // 80px
-  right: 5rem; // 80px
+  @include relative($top: 5rem, $right: 5rem); // 80px 80px
   color: $white;
   border-color: $white;
   padding: 0.75rem 3rem; // 12px 48px
