--- a/src/main/resources/public/src/scss/portal/_browser-guide.scss
+++ b/src/main/resources/public/src/scss/portal/_browser-guide.scss
@@ -30,5 +30,7 @@
     margin-top: 1.25rem; // 20px
   }
 
-  &:hover { box-shadow: $browser-hover-box-shadow; }
+  &:hover {
+    @include boxShadow(0, 0, 0.9375rem, 0, hexToRGBA(map-get($grays, 'pressed'), 0.3), true);
+  }
 }
